syntax = "proto3";
// 生成的包名
option java_package = "cn.shuangbofu.nocturne.protobuf";
//生成的java名
option java_outer_classname = "HeartBeatProto";

//心跳
message HeartBeatRequest {
    string msg = 1;
    repeated uint64 tasks = 2;
}
